Fixed ScrollText display
ScrollText text was cutoff at the top.

--- a/About/theme.css
+++ b/About/theme.css
@@ -12,5 +12,5 @@ About, QTextEdit {
 }
 
 QPushButton{
-    background-color:#47A;
+    color:black;
 }
