--- a/Window/theme.css
+++ b/Window/theme.css
@@ -28,7 +28,6 @@ AlbumArt > QToolButton {
 
 SongInfo {
     border: 5px solid rgba(68, 119, 170, 150);
-    border-radius: 40px;
     background-color:rgba(68, 119, 170, 125);
 }
 
